# backend-Web-Resto

./: .env.example  .gitignore  README.md  alembic.ini  alembic.ini.example  package-lock.json  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_migration.py  002_add_nama_pelanggan_to_pesanan.py
app/: auth.py  main.py
app/models/: detail_pesanan.py  karyawan.py  kategori_menu.py  meja.py  menu.py  pembayaran.py  pesanan.py  stok_harian.py  transaksi.py  user.py
app/routers/: auth.py  karyawan.py  kategori_menu.py  meja.py  menu.py  pembayaran.py  pesanan.py  stok_harian.py  transaksi.py  users.py
app/schemas/: karyawan.py  kategori_menu.py  meja.py  menu.py  pembayaran.py  pesanan.py  stok_harian.py  transaksi.py  user.py
